--- a/style.css
+++ b/style.css
@@ -38,6 +38,11 @@ body {
 .control-buttons button:hover {
     box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
 }
+
+/* '이미지로 저장' 버튼 스타일 추가 */
+.btn-image-save { background-color: #6D28D9; } 
+.btn-image-save:hover { background-color: #5B21B6; }
+
 .btn-save { background-color: #4299e1; } 
 .btn-save:hover { background-color: #3182ce; } 
 .btn-load-html { background-color: #f6ad55; } 
